* Translation Tab Styling   * Fix bg color   * Fix word wrap * Edit overlay   * Add 'exit' button * Update tagging functions to check for whitespace before looking for   a word translation * Fix word instances in lexer to be zero-based and not one-based

--- a/instructor_admin/static/admin/css/create_text.css
+++ b/instructor_admin/static/admin/css/create_text.css
@@ -572,8 +572,10 @@ body {
 }
 
 .translations {
+    grid-row: 2;
+    grid-column: 2;
+
     display: grid;
-    padding: 10px 10px 10px 10px;
 
     grid-template-columns: min-content;
 }
@@ -607,9 +609,11 @@ body {
 }
 
 #translations_tab {
-    display: grid;
-    grid-template-columns: 15px auto 15px;
-    margin: 15px 15px 15px 15px;
+    background: #f9f9f9;
+    padding: 15px 15px 15px 15px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
 }
 
 .add_translation {
@@ -647,8 +651,8 @@ body {
     display: grid;
     position: absolute;
 
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 10px auto 10px;
+    grid-template-rows: 10px auto 10px;
 
     margin-top: 5px;
 
@@ -665,4 +669,9 @@ body {
     border: solid 0.5px lightgrey;
     border-radius: 2px;
     box-shadow: 0 1px 16px rgba(0,0,0,.1);
+}
+
+.edit_overlay_close_btn {
+    grid-row: 1;
+    grid-column: 3;
 }
